fixed css collapsable

--- a/v3/static/css/style.css
+++ b/v3/static/css/style.css
@@ -877,3 +877,16 @@ video:focus {
   margin-bottom: 5px;
   margin-right: 5px;
 }
+
+.collapsible-header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  line-height: 1.5;
+  padding: 1rem;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+}
